# ontology

./: .gitignore  CHANGELOG.md  CONTEXT.md  Makefile  NAMESPACES.md  README.md  URI-POLICY.md  alpine.ttl  apk.ttl  arch-package-ontology.ttl  arch.ttl  bitbake.ttl  bsd-package-ontology.ttl  bsd.ttl  bsdpkg.ttl  buildroot.ttl  cargo.ttl  catalog-v001.xml  chocolatey.ttl  combined.ttl  conda.ttl  convert_to_graphson.py  core-package-ontology.ttl  core.ttl  cpan.ttl  cran.ttl  debian-package-ontology.ttl  debian.ttl  dq.ttl  examples.ttl  flatpak.ttl  freebsd.ttl  gentoo.ttl  gomod.ttl  hackage.ttl  hex.ttl  homebrew.ttl  main.py  maven.ttl  metrics.ttl  (+21 more)
.github/workflows/: ci-make.yaml  deploy-ontology.yml
core/: core.examples.ttl  core.shacl.ttl  core.ttl  skos-schemes.ttl
docs/: competency-questions.md  design-decisions.md
docs/plans/: 2026-03-26-platform-architecture-design.md  2026-03-26-platform-implementation.md  2026-04-13-slsa-prov-integration.md
docs/producer-shapes/: derivedFromCommit.md
docs/reports/: 2026-04-20-evaluation-comparison.md  2026-04-20-production-shacl-validation.md
packagegraph/: checker.py  collector.py  debian_collector.py  profiler.py  rpm_collector.py
references/: alignments.ttl  vendor-extensions.md
scripts/: README.md  add_schema_annotations.py  fix_ecosystem_patterns.py  fix_imports.py  generate-purl-mappings.sh  generate_index.py  generate_missing_shapes.py  production_shacl_validate.py  split_examples.py  split_shacl.py  sync-purls.sh  validate_integration.py  validate_module.py
tests/: test_purl_redirects.py
(+83 files in other folders)
