[project]
name = "ontology"
version = "0.1.0"
description = "Ontology for representing software packages and repositories across different package management systems"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "rdflib>=7.1.4",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pylint>=3.3.8",
    "ruff>=0.12.12",
]
